# kiki

./: .gitignore  Cargo.toml  README.md  daemon.toml
cli/: Cargo.toml
cli/src/: backend.rs  blocking_client.rs  daemon_client.rs  daemon_cmd.rs  doctor.rs  main.rs  op_heads_store.rs  op_store.rs  working_copy.rs
cli/tests/: runner.rs  test_catalog_arbitration.rs  test_e2e_regression.rs  test_git_ops.rs  test_init.rs  test_managed_workspaces.rs  test_op_store_sharing.rs  test_shared_workspace.rs
cli/tests/common/: mod.rs
daemon/: Cargo.toml
daemon/proptest-regressions/vfs/: sim_tests.txt
daemon/src/: check.rs  fi.rs  git_ops.rs  git_store.rs  hash.rs  lib.rs  local_refs.rs  main.rs  mount_meta.rs  repo_meta.rs  service.rs  store.rs  ty.rs  vfs_mgr.rs
daemon/src/remote/: fetch.rs  fs.rs  grpc.rs  mod.rs  s3.rs  server.rs  ssh.rs  sync_sim_tests.rs  tunnel.rs
daemon/src/vfs/: fuse_adapter.rs  inode.rs  kiki_fs.rs  mod.rs  nfs_adapter.rs  root_fs.rs  sim_tests.rs  yak_fs.rs
docs/: APPROVALS.md  AUTH.md  DAEMON_LIFECYCLE.md  GIT_CONVERGENCE.md  GIT_REMOTE_RESEARCH.md  LINEAR_HISTORY.md  M10.7-GITIGNORE.md  M11-PUSH-QUEUE.md  M12-WORKSPACES.md  M13-GIT-CLONE.md  M14-BLOBLESS-CLONE.md  NAMING.md  PLAN-M1-6.md  PLAN-M10.md  PLAN-M7-9.md  PLAN.md  REF_PROTECTION.md  REVIEW.md  USER_GUIDE.md  WORKSPACES.md
proto/: Cargo.toml  build.rs  jj_interface.proto
store/: Cargo.toml
store/src/: framing.rs  fs.rs  lib.rs  paths.rs
store/tests/: e2e_serve.rs
