[workspace]
members = ["daemon", "proto", "cli", "store"]
resolver = "3"

[workspace.package]
authors = ["Benjamin Brittain <ben@brittain.org>"]
description = "kiki — a remote backend for jj"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2.0.8"
assert_matches = "1.5.0"
async-trait = "0.1.83"
# Used by the fuse3 adapter (`ReplyData` and `DirectoryEntry` carry
# `Bytes`/`OsString`); kept at workspace level so other crates can grab
# the same major if they need it.
bytes = "1"
blake3 = { version = "1.5.4", features = ["traits-preview"] }
clap = { version = "4.5.0", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }
digest = "0.10"
gix = { version = "0.81", default-features = false }
# fuse3 0.8 builds on Linux + macOS but real mounts only land on Linux
# (per `docs/PLAN.md` §4.3). The adapter is built on every platform so the
# code compiles in CI; it's only wired up to a kernel mount on Linux at M4.
# `unprivileged` pulls in the `which`/`nix` deps that locate the
# `fusermount3` setuid helper — required for `Session::mount_with_unprivileged`,
# which is how M4 attaches the mount without `sudo`.
fuse3 = { version = "0.8", features = ["tokio-runtime", "unprivileged"] }
futures = "0.3.30"
itertools = "0.14"
jj-cli = "0.40"
jj-lib = {version = "0.40", default-features = true}
# Needed by the fuse3 adapter to map FsError onto unix errno constants.
libc = "0.2"
jj-lib-proc-macros = {version = "0.40", default-features = true}
nfsserve = "0.10"
parking_lot = "0.12.3"
pollster = "0.4"
prost = "0.12"
proto = { path = "./proto" }
rand = "0.9"
# Layer B (PLAN.md §8): per-mount durable storage. redb 2.x is pure-Rust,
# ACID, supports an in-memory backend for tests, and gives us a sync
# `Database` so the existing Store sync API survives the swap.
redb = "2"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
store = { path = "./store" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tower = { version = "0.4", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
toml = "0.8"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tracing = "0.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
zstd = "0.13.0"
