[package]
name = "kiki"
edition = "2024"
authors.workspace = true
description.workspace = true
version.workspace = true
autotests = false

[dependencies]
jj-lib.workspace = true
jj-cli.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
proto.workspace = true
async-trait.workspace = true
tracing.workspace = true
itertools.workspace = true
clap.workspace = true
futures.workspace = true
pollster.workspace = true
store.workspace = true
tower.workspace = true
hyper-util.workspace = true
daemon = { path = "../daemon" }
tracing-log.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
toml.workspace = true
serde.workspace = true

[features]
fault-injection = ["daemon/fault-injection"]

[[test]]
name = "runner"

[dev-dependencies]
jj-cli = { version = "0.40", features = ["test-fakes"], default-features = false }
assert_cmd.workspace = true
assert_matches.workspace = true
regex.workspace = true
chrono.workspace = true
tempfile = "3.14.0"
insta = "1.41.1"
rand.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
scopeguard = "1"
