[package]
name = "daemon"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
digest.workspace = true
clap.workspace = true
fuse3.workspace = true
gix.workspace = true
pollster.workspace = true
futures.workspace = true
jj-lib-proc-macros.workspace = true
jj-lib.workspace = true
libc.workspace = true
nfsserve.workspace = true
parking_lot.workspace = true
prost.workspace = true
proto = { path = "../proto" }
rand.workspace = true
redb.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tempfile = "3.14.0"
zstd.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1"
