[package]
name = "proto"
edition = "2024"
authors.workspace = true
description.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
tonic.workspace = true
tonic-prost = "0.14"
prost.workspace = true

[build-dependencies]
tonic-prost-build = "0.14"
protox = "0.9"
prost.workspace = true
