[package]
name = "store"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
libc.workspace = true
prost.workspace = true
proto.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["io-util", "rt", "process"] }
tracing.workspace = true

[dev-dependencies]
prost.workspace = true
proto.workspace = true
tempfile = "3.14.0"
tokio = { workspace = true, features = ["full"] }
